--- a/pages.html
+++ b/pages.html
@@ -8,5 +8,15 @@
 </head>
 <body>
     <h1>yo je m'appelle $moi j'ai $age ans</h1>
+    <form action="add.php" method="post">
+        <input type="text" name="prenom" id="prenom">
+        <input type="text" name="age" id="age">
+        <button type="submit">submit</button>
+    </form>
+    <form action="addjson.php" method="post">
+        <input type="text" name="prenom" id="prenom">
+        <input type="text" name="age" id="age">
+        <button type="submit">submit</button>
+    </form>
 </body>
 </html>
